--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,12 @@ a:hover {
   color: #535bf2;
 }
 
+html,
+body {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
 body {
   margin: 0;
   display: flex;
@@ -60,19 +66,30 @@ button:focus-visible {
 
 /* === SCROLLING === */
 /* WebKit-based browsers (Chrome, Safari, Edge) */
+html::-webkit-scrollbar,
 body::-webkit-scrollbar {
-  width: 1px;
+  width: 1px !important;
   background-color: #040404;
 }
 
+html::-webkit-scrollbar-thumb,
 body::-webkit-scrollbar-thumb {
   background-color: #fff;
 }
 
+html::-webkit-scrollbar-track,
 body::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #040404;
+}
+
+html::-webkit-scrollbar-button,
+body::-webkit-scrollbar-button {
+  display: none;
+  height: 0;
+  width: 0;
+  background: none;
 }
 
 /* Firefox */
